$Id: History,v 1.1 1999-01-07 16:09:29 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
interfaces-00-03-07 9th December 1998 Hajime Yoshida/Masayasu Nagamatu
- minor improvements in Help of G4UIterminal.cc
- G4UIGAG's Help in terminal mode is now equivalent to G4UIterminal.cc

interfaces-00-03-06 27th November 1998 Hajime Yoshida/Masayasu Nagamatu
- added 'if' protection to the destructor of G4UIterminal/G4UIGAG.

interfaces-00-03-05 12th November 1998 Masayasu Nagamatu
-test/G4cout_test01/ added an example for redirectiong stream using G4cout

interfaces-00-03-04  13th October 1998  Masayasu Nagamatu
- G4cout - changes to G4UIterminal.cc, G4UIGAG.hh, G4UIGAG.cc.

07 Ocotober 1998  Guy Barrand:
- G4UIXm.cc, G4UIWin32.cc : cout, cerr control.

interfaces-00-03-03 7th  October Hajime Yoshida
- Bug fix to prevent "help" crashing in some circumstances.

interfaces-00-03-02 14th Sep. Hajime Yoshida
	- fix to G4UIGAG (not bugs but correction of minor 
		ydifferences with G4UIterminal)

interfaces-00-03-01  12th Sep.  Hajime Yoshida and Masayasu Nagamatu
- CTRL-D doesn't invoke infinite loop.
- CRTL-D now means
	- EOF in the redirected cin
	- End of Session, just as "exit" command of GEANT4