@@ -615,6 +615,45 @@ of Verbose class.
 
 <td>accepted</td>
 </tr>
+
+<tr>
+<td>vis-01-00-07</td>
+
+<td></td>
+
+<td></td>
+
+<td>Changes to GNUmakefiles ready for the move of G4VGraphicsScene to intercoms.</td>
+
+<td>John Allison</td>
+
+<td>990415</td>
+
+<td></td>
+
+<td></td>
+</tr>
+
+<tr>
+<td>interfaces-01-00-01</td>
+
+<td></td>
+
+<td></td>
+
+<td>1) some code polishment after the messages by CodeWarriers (Guy)
+<br>2) Help functions in G4VBasicShell and related rearrangement of G4UIterminal
+etc. (Guy)
+<br>3) removal of ifdef for GNU_GCC in G4UIGAG. (Hajime)</td>
+
+<td>Hajime Yoshida</td>
+
+<td>990415</td>
+
+<td></td>
+
+<td></td>
+</tr>
 </table>
 
 <table BORDER WIDTH="100%" NOSAVE >
