@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-07 16:09:29 gunter Exp $
+$Id: History,v 1.2 1999-04-15 17:42:00 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+interfaces-01-00-01  15th April 1999  Hajime Yoshida/Masayasu Nagamatu
+1) some code polishment after the messages by CodeWarriers (Guy)
+2) Help functions in G4VBasicShell and related rearrangement of
+        G4UIterminal etc.. (Guy)
+3) removal of ifdef for GNU_GCC in G4UIGAG. (Hajime)
+
 interfaces-00-03-07 9th December 1998 Hajime Yoshida/Masayasu Nagamatu
 - minor improvements in Help of G4UIterminal.cc
 - G4UIGAG's Help in terminal mode is now equivalent to G4UIterminal.cc
